--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,11 @@
         <activity
             android:name="com.groupvite.MainActivity"
             android:label="@string/app_name" >
+            
+        </activity>
+        <activity
+            android:name="com.groupvite.CalendarActivity"
+            android:label="@string/title_activity_calendar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
