--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,13 +10,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_gvite"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/ThemeSelector" >
         <activity
             android:name="com.groupvite.MainActivity"
             android:label="@string/app_name" >
-            
         </activity>
         <activity
             android:name="com.groupvite.CalendarActivity"
@@ -26,6 +25,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.groupvite.ContactsActivity"
+            android:label="@string/title_activity_contacts" >
         </activity>
     </application>
 
