--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-18
 #android.library.reference.1=../../Downloads/android-times-square-master/library
+android.library.reference.1=../../Downloads/Caldroid-master/library
