--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-18
 #android.library.reference.1=../../Downloads/android-times-square-master/library
-android.library.reference.1=../CaldroidLib
+android.library.reference.1=../../../Desktop/Caldroid-master/library
+android.library.reference.2=../../../Desktop/facebook-android-sdk-3.5.2/facebook
