--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="18" />
@@ -33,8 +34,17 @@
             android:name="com.groupvite.ContactsActivity"
             android:label="@string/title_activity_contacts" >
         </activity>
-        <meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
-        <activity android:name="com.facebook.LoginActivity"></activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
+        <activity android:name="com.facebook.LoginActivity" >
+        </activity>
+        <activity
+            android:name="com.groupvite.PickFriendsActivity"
+            android:label="@string/title_activity_pick_friends" >
+        </activity>
     </application>
 
 </manifest>
