--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:icon="@drawable/ic_gvite"
         android:label="@string/app_name"
         android:theme="@style/ThemeSelector" >
+        <meta-data android:name="AA_DB_NAME" android:value="GroupVite.db" />
+		<meta-data android:name="AA_DB_VERSION" android:value="1" />
+        
         <activity
             android:name="com.groupvite.EventsActivity"
             android:label="@string/your_events" >
