--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-18
+target=android-17
 #android.library.reference.1=../../Downloads/android-times-square-master/library
-android.library.reference.1=../../../Desktop/Caldroid-master/library
-android.library.reference.2=../../../Desktop/facebook-android-sdk-3.5.2/facebook
+android.library.reference.1=../../Downloads/Caldroid-master/library
+android.library.reference.2=../../Downloads/facebook-android-sdk-3.5.2/facebook
