--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
     
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_gvite"
         android:label="@string/app_name"
-        android:theme="@style/ThemeSelector" >
+        android:theme="@style/AppTheme" >
         <meta-data android:name="AA_DB_NAME" android:value="GroupVite.db" />
 		<meta-data android:name="AA_DB_VERSION" android:value="1" />
         
